[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ingame/object_sprites/rabbit/rabbit2.png" type="Texture" id=1]
[ext_resource path="res://assets/ingame/object_sprites/rabbit/rabbit1.png" type="Texture" id=2]
[ext_resource path="res://rabbit.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 4.5 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3, 4 )

[node name="rabbit" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0.5 )
shape = SubResource( 2 )

[node name="animation" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "jump"

[node name="area" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="area"]
position = Vector2( -1, 1 )
shape = SubResource( 3 )

[node name="state_timer" type="Timer" parent="."]

[node name="sfx" type="AudioStreamPlayer2D" parent="."]

[connection signal="area_entered" from="area" to="." method="_on_area_area_entered"]
[connection signal="timeout" from="state_timer" to="." method="_on_state_timer_timeout"]
